codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step1_start_ls.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 887
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
