codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 891
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
