codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 895
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
    Read foo.txt
