codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 916
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt
